[project]
name = "gello"
version = "0.1.0"
authors = [
    {name="Phillip Wu", email="philippwu@berkeley.edu"}
    ]
description = "Software for gello"
dependencies = [ "dynamixel_sdk@git+https://github.com/jc211/dynamixel_sdk", "numpy" ]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gello = { path = ".", editable = true }

